--- a/index.html
+++ b/index.html
@@ -19,13 +19,10 @@
       <!-- This header contains the page's logo-->
       <div class="upperside">
         <div class="left_image">
-          <img
-            src="./meet-landing-page/desktop/image-hero-left.png"
-            alt=" left image hero"
-          />
+          <img src="./asset/image-hero-left.png" alt=" left image hero" />
         </div>
         <div class="image_hero">
-          <img src="./tablet/image-hero.png" alt="image hero" />
+          <img src="./asset/tablet/image-hero.png" alt="image hero" />
         </div>
         <div class="inner_text">
           <h1 class="group">Group Chat<br />for Everyone</h1>
@@ -39,10 +36,7 @@
           <button type button="button" class="what">What is it?</button>
         </div>
         <div class="right_image">
-          <img
-            src="/meet-landing-page/desktop/image-hero-right.png"
-            alt="right image hero"
-          />
+          <img src="/asset/image-hero-right.png" alt="right image hero" />
         </div>
       </div>
       <div class="lalipop1">
@@ -51,15 +45,15 @@
       </div>
       <div class="mid_side">
         <img
-          src="/desktop/image-woman-in-videocall.jpg"
+          src="/asset/image-woman-in-videocall.jpg"
           alt=" woman in video call"
         />
         <img
-          src="/desktop/image-women-videochatting.jpg"
+          src="/asset/image-women-videochatting.jpg"
           alt="women video-chatting"
         />
-        <img src="/desktop/image-men-in-meeting.jpg" alt="men in meeting" />
-        <img src="/desktop/image-man-texting.jpg" alt="man texting" />
+        <img src="/asset/image-men-in-meeting.jpg" alt="men in meeting" />
+        <img src="/asset/image-man-texting.jpg" alt="man texting" />
       </div>
       <div class="job">
         <h4>BUILT FOR MODERN USE</h4>
@@ -82,7 +76,9 @@
           Stay connected with reliable HD meetings and unlimited one-on-one and
           group video sessions.
         </p>
-        <button type="button" class="down2">Download <span>vl3</span></button>
+        <button type="button" class="down2">
+          Download <span class="s1">vl3</span>
+        </button>
       </div>
     </footer>
   </body>
